Fixed Layout issues with ProductsList + Fixed Layout issues with ProductsInfo Layout with the Shopping Cart Bar

--- a/Product-Database/Styles/CommonLayout.css
+++ b/Product-Database/Styles/CommonLayout.css
@@ -138,7 +138,7 @@ Shopping Cart layout
 */
 #ShoppingCartMenu
 {
-	width: 100%;
+	width: 96%;
 }
 #ShoppingCartMenu .column .recommendedLink
 {
